Fix spacing for logo and nav heading

--- a/docs/static/styles/styles.css
+++ b/docs/static/styles/styles.css
@@ -171,8 +171,7 @@ code {
 
 .layout-header h1 {
 	display: block;
-	margin-top: 1.325em;
-	margin-bottom: 0.875em;
+	margin: 0.875em 0;
 	font-size: var(--nav-title-size);
 	font-weight: var(--nav-title-font-weight);
 	text-align: var(--nav-title-align);
@@ -186,7 +185,7 @@ code {
 .layout-header img {
 	max-width: 120px;
 	display: block;
-	margin: 1em auto;
+	margin: 1.75em auto 0 auto;
 }
 
 .layout-nav {
